# Ensaios-Machine-Learning

./: .gitignore  README.md  pyproject.toml  run.py
classificacao/notebook/: classificao.ipynb
classificacao/src/: classificacao.py  classifier_evaluation.py  data_loader.py  metrics.py  model_definitions.py
clusterizacao/notebook/: clusterizacao.ipynb
clusterizacao/src/: classifier_evaluation.py  clusterizacao.py  data_loader.py  metrics.py  model_definitions.py
regressao/notebook/: regressao.ipynb
regressao/src/: classifier_evaluation.py  data_loader.py  metrics.py  model_definitions.py  regressao.py
